# wgtf

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md
src/: CMakeLists.txt
src/core/: .gitignore
src/core/app/generic_app/: CMakeLists.txt
src/core/app/maya_plugin/: CMakeLists.txt  plugins_maya.txt
src/core/app/qt_desktop/: CMakeLists.txt
src/core/interfaces/application_settings/: i_application_settings.hpp
src/core/interfaces/asset_manager/: i_asset_manager.hpp
src/core/interfaces/common_include/: CMakeLists.txt  env_pointer.hpp  i_static_initializer.hpp  qrc_loader.hpp  qrc_loader_helper.hpp
src/core/interfaces/core_copy_paste/: i_copy_paste_manager.hpp  i_copyable_object.hpp
src/core/interfaces/core_python_script/: CMakeLists.txt  i_scripting_engine.hpp
src/core/interfaces/core_script/: CMakeLists.txt  type_converter_queue.hpp
src/core/interfaces/core_serialization/: i_file_info.hpp  i_file_system.hpp  i_file_utilities.hpp  i_resource_system.hpp
src/core/interfaces/core_serialization_new/: ISerializationHandlerManager.hpp  ISerializerNew.hpp
src/core/interfaces/core_splash/: CMakeLists.txt  i_splash.hpp
src/core/interfaces/core_viewport/: i_viewport.hpp
src/core/interfaces/curve_editor/: curve_types.hpp  i_curve.hpp  i_curve_editor.hpp  i_curve_interpolator.hpp
src/core/interfaces/editor/: CMakeLists.txt  i_document.hpp  i_editor.hpp  i_editor_common.hpp
src/core/interfaces/editor_interaction/: i_background_worker.hpp
src/core/interfaces/grabber_manager/: i_grabber.hpp  i_grabber_manager.hpp
src/core/interfaces/panel_manager/: i_panel_manager.hpp
src/core/interfaces/static_string_database/: i_static_string_database.hpp
src/core/interfaces/toolbox/: i_tool.hpp  i_toolbox.hpp
src/core/interfaces/version_control/: CMakeLists.txt  i_depot_view.hpp  i_file_status_manager.hpp  i_result.hpp  i_version_control.hpp
src/core/lib/core_asset_browser/: i_asset_browser_manager.hpp  i_asset_listener.hpp
src/core/lib/core_automation/: CMakeLists.txt
src/core/lib/core_base_editor/: CMakeLists.txt  base_editor.cpp  base_editor.hpp  log_listener.cpp  log_listener.hpp  resource_log_listener.cpp  resource_log_listener.hpp
src/core/lib/core_command_system/: CMakeLists.txt  batch_command.cpp  batch_command.hpp  batch_command.mpp  command.cpp  command.hpp  command_instance.cpp  command_instance.hpp  command_manager.cpp  command_manager.hpp  command_system.cpp  command_system.hpp  compound_command.cpp  compound_command.hpp  custom_undo_redo_data.cpp  custom_undo_redo_data.hpp  env_system.cpp  env_system.hpp  i_command_event_listener.hpp  i_command_manager.hpp  i_env_system.hpp  i_history_panel.h  macro_object.cpp  macro_object.hpp  reflection_auto_reg.mpp  reflection_undo_redo_data.cpp  reflection_undo_redo_data.hpp  undo_redo_command.cpp  undo_redo_command.hpp  undo_redo_command.mpp  undo_redo_data.hpp
src/core/lib/core_common/: CMakeLists.txt  CMakeLists.unix.txt  CMakeLists.windows.txt  assert.hpp  connection_holder.hpp  deprecated.hpp  function_traits.hpp  holder_collection.hpp  ngt_windows.cpp  ngt_windows.hpp  objects_pool.hpp  platform_dbg.cpp  platform_dbg.hpp  platform_dll.cpp  platform_dll.hpp  platform_env.cpp  platform_env.hpp  platform_export.hpp  platform_path.cpp  platform_path.hpp  platform_std.hpp  scoped_stop_watch.cpp  scoped_stop_watch.hpp  shared_library.cpp  shared_library.hpp  shared_library_unix.cpp  shared_library_windows.cpp  signal.cpp  signal.hpp  strong_type.hpp  thread_local_value.cpp  thread_local_value.hpp  thread_local_value_impl.hpp  tuple_helper.hpp  wg_condition_variable.cpp  wg_condition_variable.hpp  wg_dlink.cpp  wg_dlink.hpp  wg_future.hpp  wg_hash.hpp  (+2 more)
src/core/lib/core_data_model/: CMakeLists.txt  abstract_item.hpp  abstract_item_model.cpp  abstract_item_model.hpp  collection_list_item.cpp  collection_list_item.hpp  collection_model.cpp  collection_model.hpp  collection_model_old.cpp  collection_model_old.hpp  common_data_roles.hpp  filtered_list_model.cpp  filtered_list_model.hpp  filtered_tree_model.cpp  filtered_tree_model.hpp  generic_list.hpp  generic_tree_item.cpp  generic_tree_item.hpp  generic_tree_model.cpp  generic_tree_model.hpp  i_active_filters_model.hpp  i_breadcrumbs_model.hpp  i_breadcrumbs_model_new.hpp  i_item.hpp  i_item_role.cpp  i_item_role.hpp  i_list_model.cpp  i_list_model.hpp  i_model_extension.cpp  i_model_extension.hpp  i_model_extension.mpp  i_selection_handler.hpp  i_tree_item.hpp  i_tree_model.cpp  i_tree_model.hpp  i_value_change_notifier.hpp  reflection_auto_reg.mpp  selection_handler.cpp  selection_handler.hpp  simple_active_filters_model.cpp  (+4 more)
src/core/lib/core_data_model_cmds/: CMakeLists.txt  item_model_controller.cpp  item_model_controller.hpp  reflection_auto_reg.mpp
src/core/lib/core_dependency_system/: CMakeLists.txt  context_callback_helper.hpp  depends.cpp  depends.hpp  di_ref.cpp  di_ref.hpp  i_interface.hpp  interface_helpers.hpp  wgt_static_init.cpp  wgt_static_init.hpp
src/core/lib/core_environment_system/: CMakeLists.txt  env_system.cpp  env_system.hpp  i_env_system.hpp
src/core/lib/core_file_logging/: CMakeLists.txt  file_logger.cpp  file_logger.hpp
src/core/lib/core_generic_plugin/: CMakeLists.txt  env_context.hpp  generic_plugin.cpp  generic_plugin.hpp
src/core/lib/core_generic_plugin_manager/: CMakeLists.txt  config_plugin_loader.cpp  config_plugin_loader.hpp  default_context_manager.cpp  default_context_manager.hpp  folder_plugin_loader.cpp  folder_plugin_loader.hpp  generic_plugin_manager.cpp  generic_plugin_manager.hpp  notify_plugin.cpp  notify_plugin.hpp  plugin_context_manager.cpp  plugin_context_manager.hpp  plugin_static_initializer.cpp  plugin_static_initializer.hpp
src/core/lib/core_generic_plugin_test/: CMakeLists.txt  memory_plugin_context_creator.cpp  memory_plugin_context_creator.hpp  plugin_memory_allocator.cpp  plugin_memory_allocator.hpp  test_plugin_loader.cpp  test_plugin_loader.hpp
src/core/lib/core_logging/: logging.cpp  (+4 more)
src/core/plugins/: ngt_core_plugins.qmlproject
src/core/testing/: ngt_core_testing.qmlproject
(+2389 files in other folders)
